--- a/site/public/index.html
+++ b/site/public/index.html
@@ -8,8 +8,10 @@
   <meta name="author" content="">
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
     rel="stylesheet">
+  <link href="/assets/images/logo.png" rel="icon">
+  <link href="/assets/images/logo.png" rel="apple-touch-icon">
 
-  <title>Sixteen Clothing HTML Template</title>
+  <title>Perfectly Splendid</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
