--- a/site/public/index.html
+++ b/site/public/index.html
@@ -8,6 +8,8 @@
   <meta name="author" content="">
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
   <link href="/assets/images/logo.png" rel="icon">
   <link href="/assets/images/logo.png" rel="apple-touch-icon">
 
